# Big-num-calculator

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: main.cc
src/lexer/: lexing.cc  lexing.hh  token.cc  token.hh  token_type.cc  token_type.hh
src/operations/: add.cc  div.cc  mod.cc  mul.cc  operations.hh  pow.cc  sub.cc
src/parser/: ast.cc  ast.hh  ast_visit.cc  ast_visit.hh  operator_type.cc  operator_type.hh  parsing.cc  parsing.hh
src/utils/: input_error.cc  input_error.hh  options.cc  options.hh  string_op.cc  string_op.hh
tests/: suite.sh
tests/scripts_test/: addition_test.sh  division_test.sh  mixed_test.sh  mod_test.sh  multiplication_test.sh  pow_test.sh  subtraction_test.sh
